syntax = "proto3";
package auth;

option go_package = "pb/auth";

import "google/protobuf/empty.proto";

service AuthService {
    rpc RegisterAuth (UserRequest) returns (UserResponse);
    rpc GetUsers (google.protobuf.Empty) returns (UsersResponse);
}
  
message UserRequest {
    string name = 2;
    string email = 3;
    string password = 4;
}

message UserResponse {
    string id = 1;
    string name = 2;
    string email = 3;
}

message UsersResponse {
    repeated UserResponse users = 1;
}